# python-fastapi

./: .env.template  .gitignore  DEBUG_GUIDE.md  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  start-backend-debug.ps1  start-frontend-debug.ps1  test-debug.py
backend/: .env.example  Dockerfile  Dockerfile.prod  README.md  conftest.py  debug_test.py  init.sql  pyproject.toml  pytest.ini
backend/app/: api_docs.py  database.py  enums.py  main.py  models.py  schemas.py
backend/app/auth/: __init__.py  dependencies.py  rbac.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/models/: __init__.py  approval.py  attachment.py  audit.py  auth.py  base.py  comment.py  department.py  item.py  rbac.py  ticket.py  user.py
backend/app/repositories/: approval_repository.py  attachment_repository.py  base_repository.py  comment_repository.py  ticket_repository.py
backend/app/routers/: approvals.py  attachments.py  auth.py  comments.py  items.py  reports.py  tickets.py  users.py
backend/app/schemas/: __init__.py  analytics.py  approval.py  attachment.py  audit.py  auth.py  base.py  comment.py  common.py  department.py  item.py  notification.py  ticket.py  user.py
backend/load_tests/: README.md  config.toml  demo_load_test.py  generate_report.py  locustfile.py  requirements.txt  run_load_tests.bat  run_load_tests.sh
backend/scripts/: dev.bat  prod.bat  test.bat
backend/tests/: test_api_endpoints.py  test_approval_service.py  test_auth_service.py  test_notification_reporting_services.py  test_ticket_service.py
docs/: README.md  (+13 more)
(+87 files in other folders)
